Fixed Heading and Alignment

--- a/style.css
+++ b/style.css
@@ -49,7 +49,8 @@ h1 {
 
 h2 {
   color: #5f97bd;
-
+  font-family: brandon-grotesque,HelveticaNeue-Light, 'Helvetica Neue Light', 'Helvetica Neue', Helvetica, Arial, 'Lucida Grande', sans-serif;
+  font-weight: 545;
 }
 
 .viewport {
@@ -60,7 +61,6 @@ h2 {
   justify-content: center;
   align-items: center;
   height: 100vh;
-  border: 2px solid blue;
 }
 
 .work {
@@ -79,7 +79,7 @@ h2 {
 }
 
 .work-logo {
-  padding-top: 125px;
+  padding-top: 160px;
   width: 200px;
   flex-direction: column;
   justify-content: center;
@@ -95,9 +95,11 @@ h2 {
   padding-top: 0.625rem;
   margin: 0;
   color: #5f97bd;
-  font-size: 6.8rem;
+  font-size: 130px;
   font-weight: 400;
-  font-family: 'Indie Flower', cursive;
+  /* font-family: 'Indie Flower', cursive; */
+  font-family: Lemon Jelly Personal Use;
+  font-weight: 100;
 }
 
 .page-title-two {
@@ -113,7 +115,7 @@ h2 {
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-top: 430px;
+  margin-top: 150px;
 }
 
 .logos {
@@ -146,12 +148,11 @@ h2 {
 }
 
 .container {
-  /* change to 600px when project completed */
   max-width: 600px;
   width: 100%;
   flex-shrink: 1;
   overflow: auto;
-  margin-top: 300px;
+  margin-top: 60px;
 }
 
 .box {
@@ -179,4 +180,31 @@ h2 {
   font-weight: 545;
   display: flex;
   justify-content: center;
+}
+
+.contact-section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding-top: 200px;
+}
+
+.contact-title {
+  text-align: center;
+  width: 60%;
+}
+
+.contact-details {
+  text-align: center;
+  width: 60%;
+}
+
+@media screen and (max-width: 750px) {
+
+  .nav-titles {
+    width: 60%;
+  }
+
+
 }
